--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -146,7 +146,10 @@ jobs:
 
           for STATE_PATH in "${!RESOURCES[@]}"; do
             RESOURCE_ID="${RESOURCES[$STATE_PATH]}"
-            echo "Checking resource: $STATE_PATH with ID: $RESOURCE_ID"
+            if [[ -z "$RESOURCE_ID" || "$RESOURCE_ID" == "None" ]]; then
+              echo "Skipping $STATE_PATH because no valid resource ID was found."
+              continue
+            fi
 
             # Determine AWS CLI command based on resource type
             if [[ $STATE_PATH == *"aws_db_instance"* ]]; then
