only add delay for apply workflow

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -204,6 +204,7 @@ jobs:
 
       
       - name: Delay for resource propagation
+        if: ${{ env.TF_ACTION == 'apply' }}
         run: |
           echo "Waiting for resources to propagate..."
           sleep 60
