Updated Terraform workflow to include resource checks and imports

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -116,6 +116,7 @@ jobs:
             exit 1
           }
 
+          # Check for existing VPC by Name and Environment tags
           VPC_NAME="mlflow-vpc-${{ env.ENVIRONMENT }}"
           EXISTING_VPC_ID=$(aws ec2 describe-vpcs \
             --filters "Name=tag:Name,Values=$VPC_NAME" "Name=tag:Environment,Values=${{ env.ENVIRONMENT }}" \
@@ -123,28 +124,24 @@ jobs:
 
           if [[ "$EXISTING_VPC_ID" != "None" && "$EXISTING_VPC_ID" != "" ]]; then
             echo "Existing VPC found: $EXISTING_VPC_ID"
+            echo "Importing VPC into Terraform state..."
+            terraform import "module.vpc.aws_vpc.this[0]" "$EXISTING_VPC_ID" || {
+              echo "Failed to import VPC: $EXISTING_VPC_ID"
+              exit 1
+            }
           else
             echo "No existing VPC found. Terraform will attempt to create a new one."
-            EXISTING_VPC_ID=""
           fi
 
-          CLUSTER_NAME="mlflow-cluster-${{ env.ENVIRONMENT }}"
-          if aws eks describe-cluster --name "$CLUSTER_NAME" >/dev/null 2>&1; then
-            echo "EKS cluster $CLUSTER_NAME exists. Fetching VPC subnets..."
-            SUBNET_IDS=$(aws eks describe-cluster --name "$CLUSTER_NAME" --query "cluster.resourcesVpcConfig.subnetIds" --output text)
-            if [[ -n "$SUBNET_IDS" ]]; then
-              echo "subnet_ids=$SUBNET_IDS" >> $GITHUB_ENV
-            fi
-          fi
-
+          # Keep checks and imports for all AWS resources
           declare -A RESOURCES=(
             ["module.vpc.aws_vpc.this[0]"]="$EXISTING_VPC_ID"
             ["module.rds.aws_db_instance.mlflow_db"]="mlflow-db-${{ env.ENVIRONMENT }}"
-            ["module.eks.module.eks.aws_eks_cluster.this[0]"]="$CLUSTER_NAME"
-            ["module.eks.aws_cloudwatch_log_group.this[0]"]="/aws/eks/$CLUSTER_NAME/cluster"
+            ["module.eks.module.eks.aws_eks_cluster.this[0]"]="mlflow-cluster-${{ env.ENVIRONMENT }}"
+            ["module.eks.aws_cloudwatch_log_group.this[0]"]="/aws/eks/mlflow-cluster-${{ env.ENVIRONMENT }}/cluster"
             ["module.eks.aws_iam_role.eks_node_group"]="eks_node_group"
             ["module.eks.aws_kms_key.this[0]"]="5dd32b2c-2af3-443b-b016-6aa30c16b6a6"
-            ["module.eks.module.eks.module.kms.aws_kms_alias.this[\"cluster\"]"]="alias/eks/$CLUSTER_NAME"
+            ["module.eks.module.eks.module.kms.aws_kms_alias.this[\"cluster\"]"]="alias/eks/mlflow-cluster-${{ env.ENVIRONMENT }}"
             ["module.s3.aws_s3_bucket.mlflow_bucket[0]"]="mlflow-backend-${{ env.ENVIRONMENT }}"
             ["module.s3.aws_iam_user.mlflow_user[0]"]="mlflow-user"
             ["module.s3.aws_iam_policy.mlflow_s3_policy[0]"]="arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:policy/mlflow-s3-access"
@@ -153,53 +150,20 @@ jobs:
           for STATE_PATH in "${!RESOURCES[@]}"; do
             RESOURCE_ID="${RESOURCES[$STATE_PATH]}"
             if [[ -z "$RESOURCE_ID" || "$RESOURCE_ID" == "None" ]]; then
-              echo "Skipping $STATE_PATH because no valid resource ID was found (ID='$RESOURCE_ID')."
+              echo "Skipping $STATE_PATH because no valid resource ID was found."
               continue
             fi
 
-            if [[ $STATE_PATH == *"aws_db_instance"* ]]; then
-              CHECK_CMD="aws rds describe-db-instances --db-instance-identifier $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_eks_cluster"* ]]; then
-              CHECK_CMD="aws eks describe-cluster --name $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_cloudwatch_log_group"* ]]; then
-              CHECK_CMD="aws logs describe-log-groups --log-group-name-prefix $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_iam_role"* ]]; then
-              CHECK_CMD="aws iam get-role --role-name $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_kms_key"* ]]; then
-              CHECK_CMD="aws kms describe-key --key-id $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_kms_alias"* ]]; then
-              CHECK_CMD="aws kms list-aliases --region ${{ env.AWS_REGION }} | grep \"${RESOURCE_ID}\""
-            elif [[ $STATE_PATH == *"aws_s3_bucket"* ]]; then
-              CHECK_CMD="aws s3api head-bucket --bucket $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_iam_user"* ]]; then
-              CHECK_CMD="aws iam get-user --user-name $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_iam_policy"* ]]; then
-              CHECK_CMD="aws iam get-policy --policy-arn $RESOURCE_ID"
-            elif [[ $STATE_PATH == *"aws_vpc"* ]]; then
-              CHECK_CMD="aws ec2 describe-vpcs --vpc-ids $RESOURCE_ID"
+            if terraform state list | grep -q "$STATE_PATH"; then
+              echo "Resource already in Terraform state: $STATE_PATH"
             else
-              echo "Unknown resource type for $STATE_PATH. Skipping."
-              continue
-            fi
-
-            if eval "$CHECK_CMD" >/dev/null 2>&1; then
-              echo "Resource exists in AWS: $RESOURCE_ID"
-              GREP_SAFE_STATE_PATH=$(echo "$STATE_PATH" | sed 's/\[/\\[/g' | sed 's/\]/\\]/g')
-              if terraform state list | grep -q "$GREP_SAFE_STATE_PATH"; then
-                echo "Resource already in Terraform state: $STATE_PATH"
-              else
-                echo "Importing resource into Terraform state: $STATE_PATH"
-                terraform import "$STATE_PATH" "$RESOURCE_ID" || {
-                  echo "Failed to import resource: $RESOURCE_ID"
-                  exit 1
-                }
-              fi
-            else
-              echo "Resource not found in AWS: $RESOURCE_ID"
-              echo "Letting Terraform create it."
+              echo "Importing resource into Terraform state: $STATE_PATH"
+              terraform import "$STATE_PATH" "$RESOURCE_ID" || {
+                echo "Failed to import resource: $RESOURCE_ID"
+                exit 1
+              }
             fi
           done
-
           echo "Resource detection and import completed."
 
       - name: Terraform Plan
@@ -254,7 +218,7 @@ jobs:
           echo "Applying terraform configuration..."
 
           # Capture output to analyze for common errors
-          APPLY_OUTPUT=$(terraform apply -auto-approve -input=false -var="vpc_id=${{ steps.check_vpc.outputs.vpc_id }}" -var-file=terraform.tfvars 2>&1) || APPLY_STATUS=$?
+          APPLY_OUTPUT=$(terraform apply -auto-approve -input=false -var="vpc_id=${{ steps.import_resources.outputs.vpc_id }}" -var-file=terraform.tfvars 2>&1) || APPLY_STATUS=$?
 
           # Check for already exists errors
           if echo "$APPLY_OUTPUT" | grep -q "already exists"; then
