--- a/.github/workflows/plan-and-apply.yml
+++ b/.github/workflows/plan-and-apply.yml
@@ -47,7 +47,7 @@ jobs:
             cat terraform.tfvars || echo "No terraform.tfvars found"
 
       - name: Terraform Plan
-        run: terraform plan -input=false -var "cluster_name=mlflow-cluster-${{ env.ENVIRONMENT }}" -var-file=terraform.tfvars -out=tfplan
+        run: terraform plan -input=false -var "cluster_name=mlflow-cluster-${{ env.ENVIRONMENT }}" -var "account_id=${{ secrets.AWS_ACCOUNT_ID }}" -out=tfplan
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
