add sed command to strip out extra characters

--- a/.github/workflows/plan-and-apply.yml
+++ b/.github/workflows/plan-and-apply.yml
@@ -46,6 +46,7 @@ jobs:
             -var "account_id=${{ secrets.AWS_ACCOUNT_ID }}" \
             -out=tfplan 2>&1 | tee plan_output.txt
 
+          sed 's/\x1b\[[0-9;]*m//g' raw_plan_output.txt > plan_output.txt
           LOCK_ID=$(awk '/Lock Info:/ {found=1} found && /ID:/ {print $2; exit}' plan_output.txt)
 
           if [[ -n "$LOCK_ID" ]]; then
