--- a/.github/workflows/plan-and-apply.yml
+++ b/.github/workflows/plan-and-apply.yml
@@ -59,15 +59,15 @@ jobs:
             if [[ -n "$LOCK_ID" ]]; then
                 echo "Terraform state lock detected: $LOCK_ID"
                 echo "lock_id=$LOCK_ID" >> $GITHUB_OUTPUT
+            else
+                echo "lock_id=" >> $GITHUB_OUTPUT
             fi
 
             # Export success status
             if [[ $PLAN_EXIT_CODE -eq 0 ]]; then
                 echo "plan_success=true" >> $GITHUB_OUTPUT
-                exit 0
             else
                 echo "plan_success=false" >> $GITHUB_OUTPUT
-                exit 0
             fi
 
       - name: Terraform Force Unlock (if needed)
