--- a/.github/workflows/plan-and-apply.yml
+++ b/.github/workflows/plan-and-apply.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Terraform Plan (initial attempt)
         id: plan
         continue-on-error: true
-        shell: bash
+        shell: bash --noprofile --norc
         run: |
             set -o pipefail
             RAW_LOG="raw_plan_output.txt"
