--- a/.github/workflows/plan-and-apply.yml
+++ b/.github/workflows/plan-and-apply.yml
@@ -40,8 +40,9 @@ jobs:
       - name: Terraform Plan (initial attempt)
         id: plan
         continue-on-error: true
-        shell: bash --noprofile --norc
+        shell: bash
         run: |
+            set +e
             set -o pipefail
             RAW_LOG="raw_plan_output.txt"
 
