Add explicit backend.tf cleanup step to workflows
- Add 'Clean Terraform Configuration' step before terraform init
- Ensures any dynamically created backend.tf files are removed
- Additional safety measure to prevent duplicate backend configuration errors

--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -141,6 +141,12 @@ jobs:
             cp terraform.tfvars ${{ env.ENVIRONMENT }}.tfvars
           fi
 
+      - name: Clean Terraform Configuration
+        run: |
+          # Remove any dynamically created backend.tf files to prevent conflicts
+          rm -f backend.tf
+          echo "Cleaned up any conflicting backend configuration files"
+
       - name: Terraform Init
         run: terraform init -input=false
 
