--- a/.github/workflows/infrastructure-destroy.yml
+++ b/.github/workflows/infrastructure-destroy.yml
@@ -123,6 +123,12 @@ jobs:
           EOF
           fi
 
+      - name: Clean Terraform Configuration
+        run: |
+          # Remove any dynamically created backend.tf files to prevent conflicts
+          rm -f backend.tf
+          echo "Cleaned up any conflicting backend configuration files"
+
       - name: Terraform Init
         run: terraform init -input=false
 
