--- a/.github/workflows/infrastructure-full-destroy.yml
+++ b/.github/workflows/infrastructure-full-destroy.yml
@@ -1,10 +1,10 @@
-name: Infrastructure Destroy
+name: Infrastructure Full Destroy
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment to destroy (dev/staging/prod)'
+        description: 'Environment to completely destroy (dev/staging/prod)'
         required: true
         default: 'dev'
         type: choice
@@ -13,7 +13,7 @@ on:
         - staging
         - prod
       confirm_destroy:
-        description: "Type 'destroy' to confirm complete teardown"
+        description: "Type 'destroy-all' to confirm complete teardown (including data)"
         required: true
       clean_state_backend:
         description: 'Also destroy state backend (S3 bucket and DynamoDB)'
@@ -31,7 +31,7 @@ env:
 jobs:
   cleanup-kubernetes:
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.confirm_destroy == 'destroy' }}
+    if: ${{ github.event.inputs.confirm_destroy == 'destroy-all' }}
     env:
       ENVIRONMENT: ${{ github.event.inputs.environment }}
     
@@ -72,7 +72,7 @@ jobs:
   terraform-destroy:
     runs-on: ubuntu-latest
     needs: [cleanup-kubernetes]
-    if: always() && github.event.inputs.confirm_destroy == 'destroy' && (needs.cleanup-kubernetes.result == 'success' || needs.cleanup-kubernetes.result == 'skipped')
+    if: always() && github.event.inputs.confirm_destroy == 'destroy-all' && (needs.cleanup-kubernetes.result == 'success' || needs.cleanup-kubernetes.result == 'skipped')
     env:
       ENVIRONMENT: ${{ github.event.inputs.environment }}
       TF_IN_AUTOMATION: true
@@ -221,7 +221,7 @@ jobs:
   cleanup-state-backend:
     runs-on: ubuntu-latest
     needs: [terraform-destroy]
-    if: always() && github.event.inputs.clean_state_backend == 'true' && github.event.inputs.confirm_destroy == 'destroy' && needs.terraform-destroy.result == 'success'
+    if: always() && github.event.inputs.clean_state_backend == 'true' && github.event.inputs.confirm_destroy == 'destroy-all' && needs.terraform-destroy.result == 'success'
     env:
       ENVIRONMENT: ${{ github.event.inputs.environment }}
     
