--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -1,3 +1,9 @@
+# Infrastructure Deploy (Create or Resume)
+# 
+# This workflow deploys or resumes MLflow infrastructure.
+# Assumes Terraform S3 backend and DynamoDB lock table already exist.
+# Use infrastructure-full-destroy.yml to create backend if needed.
+
 name: Infrastructure Deploy (Create or Resume)
 
 on:
@@ -34,66 +40,8 @@ env:
   AWS_REGION: us-east-1
 
 jobs:
-  setup-state-backend:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.deployment_type == 'clean_setup' }}
-    outputs:
-      state-bucket: ${{ steps.create-backend.outputs.state-bucket }}
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Create Terraform State Backend
-        id: create-backend
-        run: |
-          # Create unique bucket name
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          STATE_BUCKET="terraform-state-mlflow-${ACCOUNT_ID}-${{ github.event.inputs.environment }}"
-          DYNAMODB_TABLE="terraform-locks-mlflow-${{ github.event.inputs.environment }}"
-          
-          echo "state-bucket=${STATE_BUCKET}" >> $GITHUB_OUTPUT
-          
-          # Create S3 bucket for state
-          if ! aws s3 ls "s3://${STATE_BUCKET}" 2>/dev/null; then
-            echo "Creating S3 bucket: ${STATE_BUCKET}"
-            aws s3 mb "s3://${STATE_BUCKET}" --region ${{ env.AWS_REGION }}
-            aws s3api put-bucket-versioning \
-              --bucket "${STATE_BUCKET}" \
-              --versioning-configuration Status=Enabled
-            aws s3api put-bucket-encryption \
-              --bucket "${STATE_BUCKET}" \
-              --server-side-encryption-configuration '{
-                "Rules": [{
-                  "ApplyServerSideEncryptionByDefault": {
-                    "SSEAlgorithm": "AES256"
-                  }
-                }]
-              }'
-          fi
-          
-          # Create DynamoDB table for locking
-          if ! aws dynamodb describe-table --table-name "${DYNAMODB_TABLE}" 2>/dev/null; then
-            echo "Creating DynamoDB table: ${DYNAMODB_TABLE}"
-            aws dynamodb create-table \
-              --table-name "${DYNAMODB_TABLE}" \
-              --attribute-definitions AttributeName=LockID,AttributeType=S \
-              --key-schema AttributeName=LockID,KeyType=HASH \
-              --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5
-            
-            # Wait for table to be active
-            aws dynamodb wait table-exists --table-name "${DYNAMODB_TABLE}"
-          fi
-
   terraform:
     runs-on: ubuntu-latest
-    needs: [setup-state-backend]
-    if: always() && (needs.setup-state-backend.result == 'success' || needs.setup-state-backend.result == 'skipped')
     env:
       ENVIRONMENT: ${{ github.event.inputs.environment }}
       DEPLOYMENT_TYPE: ${{ github.event.inputs.deployment_type }}
@@ -117,11 +65,9 @@ jobs:
 
       - name: Setup Terraform Backend Configuration
         run: |
-          # Remove any dynamically created backend.tf to avoid conflicts
-          rm -f backend.tf
-          
           # The backend is already configured in terraform.tf
           echo "Using existing backend configuration from terraform.tf"
+          echo "Backend S3 bucket and DynamoDB table are assumed to exist"
 
       - name: Create Environment-Specific tfvars
         run: |
@@ -144,11 +90,10 @@ jobs:
             cp terraform.tfvars ${{ env.ENVIRONMENT }}.tfvars
           fi
 
-      - name: Clean Terraform Configuration
+      - name: Validate Terraform Configuration
         run: |
-          # Remove any dynamically created backend.tf files to prevent conflicts
-          rm -f backend.tf
-          echo "Cleaned up any conflicting backend configuration files"
+          echo "Validating Terraform configuration..."
+          terraform fmt -check=true -diff=true || echo "⚠️ Terraform formatting issues detected"
 
       - name: Terraform Init
         run: terraform init -input=false
